...
const DrawerIcon = (navigation: any) => (
  <Ionicons
    color="blue"
    name="menu"
    onPress={() => navigation.navigation.toggleDrawer()}
    size={30}
    testID="drawer-icon"
  />
);

const Root = (props: any): JSX.Element => {
  const { htmlFilename, title } = props.item;

...

  useEffect(() => {
    // const languages = listLanguages("high.fi")
    const domainToUse = 'fi.high.fi';

    const fetchCategories = async () => {
      const cat = await listCategories(domainToUse, 'Suosituimmat', 'uutiset', 'Uusimmat', 'finnish');

      setCategories(cat);
      setLoading(false);
      setError(false);
    };

...
